# GovClaw

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  RESEARCH.md  UPSTREAM.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  release.yaml
cli/defenseclaw/: __init__.py  codeguard_skill.py  config.py  context.py  db.py  gateway.py  guardrail.py  llm.py  logger.py  main.py  models.py
cli/tests/: test_claw_inventory.py  test_cmd_doctor.py  test_cmd_init.py  test_cmd_mcp.py  test_cmd_misc.py  test_cmd_plugin.py  test_cmd_policy.py  test_cmd_skill.py  test_commands.py  test_config.py  test_gateway.py  test_guardrail.py  test_judge.py  test_models_db.py  test_plugin_enforcer.py  test_policy_scan_integration.py
cmd/defenseclaw/: main.go
docs/: API.md  ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  GUARDRAIL.md  INSTALL.md  OTEL.md  QUICKSTART.md  README.md
extensions/defenseclaw/: openclaw.plugin.json  package-lock.json  package.json
guardrails/: defenseclaw_guardrail.py
internal/audit/: export.go  logger.go  logger_test.go  network_egress.go  network_egress_test.go  splunk.go  splunk_test.go  store.go
internal/cli/: daemon.go  policy.go  root.go  scan.go  sidecar.go
internal/config/: claw.go  config.go  config_test.go  defaults.go
internal/daemon/: daemon.go  proc_unix.go
internal/enforce/: plugin_enforcer.go  policy.go  skill_enforcer.go
internal/firewall/: config.go
internal/gateway/: SPEC.md  api.go  client.go  device.go  frames.go  gateway_test.go  gateway_ws_test.go  health.go  inspect.go  litellm.go  llm_judge.go  proxy.go  proxy_test.go  router.go  rpc.go  rules.go  rules_analysis_test.go  rules_test.go  sidecar.go
internal/policy/: engine.go  engine_extended_test.go  engine_test.go  policy_scan_integration_test.go  types.go
internal/sandbox/: openshell.go
internal/scanner/: clawshield_injection.go  clawshield_malware.go  clawshield_pii.go  clawshield_secrets.go  clawshield_vuln.go  codeguard.go  codeguard_test.go  mcp.go  plugin.go  plugin_test.go  result.go  skill.go
internal/telemetry/: alerts.go  metrics.go  policy.go  provider.go  (+4 more)
plugins/: registry.go
policies/: default.yaml  permissive.yaml  strict.yaml
research/: Makefile  PLAN.md  README.md
schemas/: audit-event.json
scripts/: install-dev.sh  install.sh  test-e2e-cli.py  test-e2e-full-stack.sh  test-e2e-tool-block.sh  test-litellm-proxy.py
(+114 files in other folders)
