[project]
name = "defenseclaw"
version = "0.2.0"
description = "Enterprise governance layer for OpenClaw — secures agentic AI deployments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "click==8.3.1",
    "pyyaml==6.0.3",
    "requests==2.33.0",
    "rich>=13.0",
    "cisco-ai-skill-scanner==2.0.8",
    "cisco-ai-mcp-scanner>=4.3; python_version>='3.11'",
]

[project.optional-dependencies]
tui = ["textual>=0.50"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "ruff==0.15.7",
]

[project.scripts]
defenseclaw = "defenseclaw.main:cli"

[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["cli"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
defenseclaw = [
    "_data/policies/*.yaml",
    "_data/policies/rego/*.rego",
    "_data/policies/rego/*.json",
    "_data/skills/codeguard/*.md",
    "_data/skills/codeguard/*.yaml",
    "_data/skills/codeguard/*.py",
    "_data/splunk_local_bridge/bin/*",
    "_data/splunk_local_bridge/compose/*",
    "_data/splunk_local_bridge/env/.env.example",
    "_data/splunk_local_bridge/splunk/*",
    "_data/splunk_local_bridge/splunk/ansible/*",
    "_data/splunk_local_bridge/splunk/bin/*",
    "_data/splunk_local_bridge/splunk/apps/defenseclaw_local_mode/bin/*",
    "_data/splunk_local_bridge/splunk/apps/defenseclaw_local_mode/default/*",
    "_data/splunk_local_bridge/splunk/apps/defenseclaw_local_mode/default/data/ui/nav/*",
    "_data/splunk_local_bridge/splunk/apps/defenseclaw_local_mode/default/data/ui/views/*",
    "_data/splunk_local_bridge/splunk/apps/defenseclaw_local_mode/metadata/*",
    "_data/scripts/*.sh",
    "_data/policies/openshell/*.rego",
    "_data/policies/openshell/*.yaml",
]

[tool.uv]
default-groups = ["dev"]
# cisco-ai-skill-scanner 2.0.6 pins rich==14.2.0 but also pins
override-dependencies = [
    "rich>=13.7.1,<14.0.0",
    "cryptography>=46.0.7",   # CVE-2026-39892 fixed in 46.0.7
    "litellm==1.83.0",        # CVE-2026-35029, CVE-2026-35030
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["cli/tests"]
